fixing footer spacing and margins

--- a/public/styles.css
+++ b/public/styles.css
@@ -47,7 +47,7 @@ p {
    
   }
   .social-icon {
-    margin: 20px 10px;
+    margin: 0px 10px;
   }
 
   .LogonContainer {
